--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="AutoFixture" version="3.49.0" targetFramework="net451" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
   <package id="FluentAssertions" version="4.12.0" targetFramework="net451" />
   <package id="mongocsharpdriver" version="1.10.0" targetFramework="net451" />
+  <package id="Moq" version="4.5.16" targetFramework="net451" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net451" />
-  <package id="NUnit" version="2.6.4" targetFramework="net451" />
+  <package id="NUnit" version="3.4.1" targetFramework="net451" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
 </packages>
