--- a/src/SFA.Apprenticeships.Infrastructure.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.UnitTests/packages.config
@@ -2,9 +2,10 @@
 <packages>
   <package id="AutoFixture" version="3.49.0" targetFramework="net451" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
   <package id="FluentAssertions" version="4.12.0" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net451" />
+  <package id="Moq" version="4.5.16" targetFramework="net451" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="NUnit" version="3.4.1" targetFramework="net451" />
