--- a/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/SFA.Apprenticeships.Web.Candidate.AcceptanceTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/SFA.Apprenticeships.Web.Candidate.AcceptanceTests.csproj
@@ -104,9 +104,9 @@
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.Extensions.Desktop.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.4.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="SpecBind, Version=1.6.2.232, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SpecBind.1.6.2.232\lib\net45\SpecBind.dll</HintPath>
