--- a/src/SFA.Apprenticeships.Web.Recruit.EndToEndTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit.EndToEndTests/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
   <package id="FluentAssertions" version="4.12.0" targetFramework="net451" />
   <package id="mongocsharpdriver" version="1.10.0" targetFramework="net451" />
-  <package id="NUnit" version="2.6.4" targetFramework="net451" />
+  <package id="Moq" version="4.5.19" targetFramework="net451" />
+  <package id="NUnit" version="3.4.1" targetFramework="net451" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
   <package id="structuremap.web" version="3.1.0.133" targetFramework="net451" />
 </packages>
