--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoFixture" version="3.49.0" targetFramework="net451" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
   <package id="FluentAssertions" version="4.12.0" targetFramework="net451" />
   <package id="FluentValidation" version="5.6.2.0" targetFramework="net452" />
   <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net452" />
@@ -10,7 +11,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net451" />
+  <package id="Moq" version="4.5.16" targetFramework="net451" />
   <package id="NUnit" version="3.4.1" targetFramework="net451" />
   <package id="RazorGenerator.Testing" version="2.3.4" targetFramework="net451" />
   <package id="ReflectionMagic" version="2.1.0" targetFramework="net451" />
