--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/App.Local.config
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/App.Local.config
@@ -2,6 +2,6 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
-    <add key="ApiBaseUrl" value="http://local-restapi.findapprenticeship.service.gov.uk/" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add key="ApiBaseUrl" value="http://local-restapi.findapprenticeship.service.gov.uk/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 </configuration>
