--- a/src/SFA.DAS.RAA.Api/SFA.DAS.RAA.Api.csproj
+++ b/src/SFA.DAS.RAA.Api/SFA.DAS.RAA.Api.csproj
@@ -245,6 +245,8 @@
     <Compile Include="Handlers\ApiKeyHandler.cs" />
     <Compile Include="Models\VacancyApiModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\IVacancyProvider.cs" />
+    <Compile Include="Providers\VacancyProvider.cs" />
     <Compile Include="Services\ApiKeyAuthenticationService.cs" />
     <Compile Include="Services\IAuthenticationService.cs" />
     <Compile Include="Startup.cs" />
