--- a/src/SFA.DAS.RAA.Api.UnitTests/SFA.DAS.RAA.Api.UnitTests.csproj
+++ b/src/SFA.DAS.RAA.Api.UnitTests/SFA.DAS.RAA.Api.UnitTests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Controllers\VacancyManagementControllerTests.cs" />
     <Compile Include="Factories\RaaApiUserFactory.cs" />
     <Compile Include="Handlers\ApiKeyHandlerTests.cs" />
     <Compile Include="PilotLightTest.cs" />
@@ -98,6 +99,10 @@
     </Reference>
     <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ploeh.AutoFixture, Version=3.50.2.0, Culture=neutral, PublicKeyToken=b24654c590009d4f, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoFixture.3.50.2\lib\net40\Ploeh.AutoFixture.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http" />
