--- a/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
@@ -91,13 +91,13 @@
     <Reference Include="CuttingEdge.Conditions">
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
     </Reference>
-    <Reference Include="FluentValidation, Version=6.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentValidation.6.2.1.0\lib\Net45\FluentValidation.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="FluentValidation, Version=5.6.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FluentValidation.5.6.2.0\lib\Net45\FluentValidation.dll</HintPath>
     </Reference>
-    <Reference Include="FluentValidation.Mvc, Version=6.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentValidation.MVC5.6.2.1.0\lib\Net45\FluentValidation.Mvc.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="FluentValidation.Mvc, Version=5.6.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FluentValidation.MVC5.5.6.2.0\lib\Net45\FluentValidation.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
@@ -376,6 +376,7 @@
     <None Include="Content\libs\vendor\nanospell\server\license\key.lic" />
     <None Include="Content\libs\vendor\nanospell\server\license\web.config" />
     <None Include="Content\scss\styles.scss" />
+    <None Include="Content\scss\_sfa-notifications.scss" />
     <None Include="Content\scss\_sfa-banners.scss" />
     <None Include="Content\scss\_address-service-styles.scss" />
     <None Include="Content\scss\_forms.scss" />
@@ -386,7 +387,7 @@
     <None Include="Content\scss\_select2-styles.scss" />
     <None Include="Content\scss\_sfa-custom-layouts.scss" />
     <None Include="Content\scss\_sfa-buttons.scss" />
-    <None Include="Content\scss\_form-warnings.scss" />
+    <None Include="Content\scss\_sfa-form-warnings.scss" />
     <None Include="Content\scss\_inline-search.scss" />
     <None Include="Content\scss\_tabbed-nav.scss" />
     <None Include="package.json" />
@@ -408,6 +409,7 @@
     <Content Include="Content\libs\prototype-recruit.js" />
     <Content Include="Content\libs\refineSearch.js" />
     <Content Include="Content\libs\scripts.js" />
+    <Content Include="Content\libs\scripts.min.js" />
     <Content Include="Content\libs\sticky.js" />
     <Content Include="Content\libs\vendor\chosen.jquery.js" />
     <Content Include="Content\libs\vendor\ckeditor\adapters\jquery.js" />
@@ -619,6 +621,7 @@
     <Content Include="Content\libs\vendor\jquery.scrollTableBody-1.0.0.js" />
     <Content Include="Content\libs\vendor\jquery.validate-vsdoc.js" />
     <Content Include="Content\libs\vendor\jquery.validate.js" />
+    <Content Include="Content\libs\vendor\jquery.validate.min.js" />
     <Content Include="Content\libs\vendor\jquery.validate.unobtrusive.custom.js" />
     <Content Include="Content\libs\vendor\jquery.validate.unobtrusive.js" />
     <Content Include="Content\libs\vendor\jquery.validate.unobtrusive.min.js" />
